--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import 'fonts';
+@import 'animation';
 
 ::selection {
     background: #fff;
@@ -27,457 +28,8 @@ html {
 	white-space: nowrap;
 }
 
-body {
-	background-attachment: fixed;
-	background-color: #000;
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-
-	&.hartnell {
-		background-image: url('../images/bg-hartnell.jpg');
-	}
-
-	&.troughton {
-		background-image: url('../images/bg-troughton.jpg');
-	}
-
-	&.pertwee {
-		background-image: url('../images/bg-pertwee.jpg');
-	}
-
-	&.tbaker,
-	&.tbaker2 {
-		background-image: url('../images/bg-tbaker.jpg');
-	}
-
-	&.davison {
-		background-image: url('../images/bg-davison.jpg');
-	}
-
-	&.cbaker {
-		background-image: url('../images/bg-cbaker.jpg');
-	}
-
-	&.mccoy {
-		background-image: url('../images/bg-mccoy.jpg');
-	}
-
-	&.eccleston {
-		background-image: url('../images/bg-eccleston.jpg');
-	}
-
-	&.tennant {
-		background-image: url('../images/bg-eccleston.jpg');
-	}
-
-	&.smith {
-		background-image: url('../images/bg-smith.jpg');
-	}
-
-	&.smith2 {
-		background-image: url('../images/bg-smith2.jpg');
-	}
-
-	&.capaldi {
-		background-image: url('../images/bg-capaldi.jpg');
-	}
-
-}
-
-.vortex {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 1;
-}
-
-.title {
-	position: absolute;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
-	width: 100%;
-	padding: 0 5%;
-	text-align: center;
-
-	@media (min-width: 1200px) {
-		padding: 0 8%;
-	}
-
-	.hartnell & {
-		color: #fff;
-		font-family: 'Bureau Grotesque', sans-serif;
-		font-size: 44px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		line-height: 1;
-		text-shadow: 0 0 100px rgba(0, 0, 0, 1);
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 56px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 80px;
-		}
-
-		@media (min-width: 800px) {
-			font-size: 100px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 120px;
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 140px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 150px;
-		}
-	}
-
-	.troughton & {
-		color: #f1f1f1;
-		font-family: 'Eurostile', sans-serif;
-		font-size: 36px;
-		letter-spacing: 2px;
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 46px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 64px;
-		}
-
-		@media (min-width: 800px) {
-			font-size: 80px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 96px;
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 112px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 140px;
-		}
-	}
-
-	.pertwee & {
-		color: #f5f571;
-		font-family: 'Futura Bold', sans-serif;
-		font-size: 42px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		line-height: 0.9;
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 50px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 70px;
-		}
-
-		@media (min-width: 800px) {
-			font-size: 80px;
-		}
-
-		@media (min-width: 1100px) {
-			font-size: 112px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 140px;
-		}
-	}
-
-	.tbaker & {
-		color: #fff;
-		font-family: 'Futura Extra Bold', sans-serif;
-		font-size: 36px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		text-shadow: 0 0 100px rgba(12, 15, 33, 1);
-		text-transform: uppercase;
-		word-spacing: -0.125em;
-
-		@media (min-width: 400px) {
-			font-size: 46px;
-		}
-
-		@media (min-width: 500px) {
-			font-size: 60px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 70px;
-		}
-
-		@media (min-width: 1020px) {
-			font-size: 96px;
-		}
-
-		@media (min-width: 1280px) {
-			font-size: 120px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 140px;
-		}
-	}
-
-	.tbaker2 & {
-		color: #fff;
-		font-family: 'Della Robbia Bold', sans-serif;
-		font-size: 42px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		line-height: 1.05;
-		text-shadow: 0 0 100px rgba(12, 15, 33, 1);
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 50px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 70px;
-		}
-
-		@media (min-width: 800px) {
-			font-size: 80px;
-		}
-
-		@media (min-width: 1020px) {
-			font-size: 100px;
-		}
-
-		@media (min-width: 1280px) {
-			font-size: 120px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 150px;
-		}
-	}
-
-	.davison &,
-	.cbaker & {
-		color: #fff;
-		font-family: 'Arial MT Extra Bold', sans-serif;
-		font-size: 36px;
-		line-height: 1.1;
-		letter-spacing: 1px;
-		-webkit-text-fill-color: rgba(0, 0, 0, 0.5);
-		-webkit-text-stroke-width: 1px;
-		-webkit-text-stroke-color: #fff;
-
-		@media (min-width: 400px) {
-			font-size: 46px;
-		}
-
-		@media (min-width: 568px) {
-			font-size: 68px;
-		}
-
-		@media (min-width: 800px) {
-			font-size: 80px;
-			-webkit-text-stroke-width: 2px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 96px;
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 120px;
-		}
-	}
-
-	.mccoy & {
-		color: #fff;
-		font-family: 'UniversLT Ultra Condensed', sans-serif;
-		font-size: 46px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		line-height: 0.9;
-		text-shadow: 0 0 40px rgba(38, 3, 98, 1);
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 56px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 70px;
-		}
-
-		@media (min-width: 800px) {
-			font-size: 96px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 110px;
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 124px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 140px;
-		}
-	}
-
-	.eccleston &,
-	.tennant & {
-		color: #fff;
-		font-family: 'Futura Book', sans-serif;
-		font-size: 36px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		line-height: 0.9;
-		text-shadow: 0 0 20px rgba(28, 2, 1, 1);
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 44px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 60px;
-			text-shadow: 0 0 40px rgba(28, 2, 1, 1);
-		}
-
-		@media (min-width: 800px) {
-			font-size: 70px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 80px;
-			text-shadow: 0 0 60px rgba(28, 2, 1, 1);
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 100px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 110px;
-		}
-	}
-
-	.smith & {
-		color: #fff;
-		font-family: 'Contax Pro', sans-serif;
-		font-size: 30px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		letter-spacing: 6;
-		line-height: 1.2;
-		text-shadow: 0 0 20px rgba(21, 19, 30, 1);
-		text-transform: uppercase;
-		word-spacing: 4;
-
-		@media (min-width: 400px) {
-			font-size: 36px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 46px;
-			letter-spacing: 8;
-			text-shadow: 0 0 40px rgba(21, 19, 30, 1);
-		}
-
-		@media (min-width: 800px) {
-			font-size: 60px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 70px;
-			letter-spacing: 10;
-			text-shadow: 0 0 80px rgba(21, 19, 30, 1);
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 80px;
-		}
-	}
-
-	.smith2 & {
-		color: #fff;
-		font-family: 'SF Movie Poster', sans-serif;
-		font-size: 46px;
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		letter-spacing: 6;
-		line-height: 1;
-		text-shadow: 1px 2px 3px rgba(44, 26, 22, 1);
-		text-transform: uppercase;
-
-		@media (min-width: 400px) {
-			font-size: 56px;
-		}
-
-		@media (min-width: 600px) {
-			font-size: 80px;
-			letter-spacing: 10;
-			text-shadow: 2px 3px 3px rgba(44, 26, 22, 0.8);
-		}
-
-		@media (min-width: 800px) {
-			font-size: 100px;
-		}
-
-		@media (min-width: 1000px) {
-			font-size: 110px;
-		}
-
-		@media (min-width: 1200px) {
-			font-size: 124px;
-		}
-
-		@media (min-width: 1400px) {
-			font-size: 140px;
-			text-shadow: 3px 4px 3px rgba(44, 26, 22, 0.7);
-		}
-	}
-}
-
-.title-create {
-	position: absolute;
-	bottom: 5%;
-	left: 5%;
-	background: transparent;
-	border: 0;
-	cursor: pointer;
-
-	&:hover,
-	&:focus {
-		outline: 0;
-
-		img {
-			opacity: 1;
-		}
-	}
-
-	img {
-		width: 32px;
-		height: 32px;
-		opacity: 0.5;
-		transition: opacity 100ms ease-out;
-	}
-}
+@import 'backgrounds';
+@import 'type';
+@import 'page';
+@import 'screenshot';
+@import 'modal';
